# simuImageProcessing

./: CMakeLists.txt  calibration.json
filesUtils/: 99-usb-serial.rules
otherFiles/: adok.service
src/: Main.cpp
